--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "dotenv": "^16.4.5",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.14.2"
   },
