--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.14.2"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
